--- a/.config/qimgv/qimgv.conf
+++ b/.config/qimgv/qimgv.conf
@@ -25,9 +25,9 @@ infiniteScrolling=false
 infoBarFullscreen=true
 infoBarWindowed=false
 keepFitMode=true
-lastVerMajor=0
-lastVerMicro=1
-lastVerMinor=9
+lastVerMajor=1
+lastVerMicro=0
+lastVerMinor=0
 mainPanelSize=230
 mouseWrapping=false
 mpvBinary=/usr/bin/mpv
@@ -57,7 +57,7 @@ zoomIndicatorMode=0
 zoomStep=0.1
 
 [Controls]
-shortcuts="zoomIn=+", "frameStepBack=,", "zoomOut=-", "frameStep=.", "fitWindow=1", "fitWidth=2", "fitNormal=3", "exit=Alt+X", "folderView=Backspace", "copyFile=C", "copyFileClipboard=Ctrl+C", "showInDirectory=Ctrl+D", "zoomOut=Ctrl+Down", "rotateLeft=Ctrl+L", "open=Ctrl+O", "openSettings=Ctrl+P", "exit=Ctrl+Q", "rotateRight=Ctrl+R", "save=Ctrl+S", "copyPathClipboard=Ctrl+Shift+C", "saveAs=Ctrl+Shift+S", "zoomIn=Ctrl+Up", "zoomInCursor=Ctrl+WheelDown", "zoomOutCursor=Ctrl+WheelUp", "moveToTrash=Del", "scrollDown=Down", "jumpToLast=End", "folderView=Enter", "closeFullScreenOrExit=Esc", "toggleFullscreen=F", "toggleFullscreen=F11", "renameFile=F2", "reloadImage=F5", "flipH=H", "jumpToFirst=Home", "toggleImageInfo=I", "toggleFullscreen=LMB_DoubleClick", "prevImage=Left", "moveFile=M", "contextMenu=Menu", "exit=MiddleButton", "closeFullScreenOrExit=Q", "resize=R", "contextMenu=RMB", "nextImage=Right", "toggleShuffle=S", "removeFile=Shift+Del", "seekBackVideo=Shift+Left", "seekVideo=Shift+Right", "toggleFitMode=Space", "scrollUp=Up", "flipV=V", "prevImage=WheelDown", "nextImage=WheelUp", "crop=X", "prevImage=XButton1", "nextImage=XButton2", "toggleSlideshow=`"
+shortcuts="zoomIn=+", "frameStepBack=,", "zoomOut=-", "frameStep=.", "fitWindow=1", "fitWidth=2", "fitNormal=3", "exit=Alt+X", "folderView=Backspace", "copyFile=C", "copyFileClipboard=Ctrl+C", "showInDirectory=Ctrl+D", "zoomOut=Ctrl+Down", "rotateLeft=Ctrl+L", "seekVideoBackward=Ctrl+Left", "open=Ctrl+O", "print=Ctrl+P", "exit=Ctrl+Q", "rotateRight=Ctrl+R", "seekVideoForward=Ctrl+Right", "save=Ctrl+S", "copyPathClipboard=Ctrl+Shift+C", "saveAs=Ctrl+Shift+S", "zoomIn=Ctrl+Up", "zoomInCursor=Ctrl+WheelDown", "zoomOutCursor=Ctrl+WheelUp", "discardEdits=Ctrl+Z", "moveToTrash=Del", "scrollDown=Down", "jumpToLast=End", "folderView=Enter", "closeFullScreenOrExit=Esc", "toggleFullscreen=F", "toggleFullscreen=F11", "renameFile=F2", "reloadImage=F5", "flipH=H", "jumpToFirst=Home", "toggleImageInfo=I", "toggleFullscreen=LMB_DoubleClick", "prevImage=Left", "moveFile=M", "contextMenu=Menu", "exit=MiddleButton", "openSettings=P", "closeFullScreenOrExit=Q", "resize=R", "contextMenu=RMB", "nextImage=Right", "toggleShuffle=S", "removeFile=Shift+Del", "toggleFullscreenInfoBar=Shift+F", "prevDirectory=Shift+Left", "nextDirectory=Shift+Right", "toggleFitMode=Space", "scrollUp=Up", "flipV=V", "prevImage=WheelDown", "nextImage=WheelUp", "crop=X", "prevImage=XButton1", "nextImage=XButton2", "toggleSlideshow=`"
 
 [Scripts]
 script\size=0
