--- a/.gitconfig
+++ b/.gitconfig
@@ -5,8 +5,11 @@
     rebase = true
 [alias]
         ls-subtrees = !"for i in $(git log | grep git-subtree-dir | sed -e 's/^.*: //g' | uniq); do test -d $i && echo $i; done"
-    
 [init]
 	defaultBranch = main
 [http]
 	sslBackend = openssl
+[credential]
+	helper = cache
+[merge]
+	tool = meld
