Spotify increase the hight. Kitty prepare for colorschemes.

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -164,12 +164,10 @@ box_drawing_scale 0.001, 1, 1.5, 2
 #: }}}
 
 #: Cursor customization {{{
-
-cursor #cccccc
+# cursor #cccccc
 
 #: Default cursor color
-
-cursor_text_color #111111
+# cursor_text_color #111111
 
 #: Choose the color of text under the cursor. If you want it rendered
 #: with the background color of the cell underneath instead, use the
@@ -269,8 +267,7 @@ mouse_hide_wait 3.0
 #: typing text. Disabled by default on macOS as getting it to work
 #: robustly with the ever-changing sea of bugs that is Cocoa is too
 #: much effort.
-
-url_color #0087bd
+# url_color #0087bd
 url_style curly
 
 #: The color and style for highlighting URLs on mouse-over. url_style
@@ -569,17 +566,14 @@ placement_strategy center
 #: this option. Using a value of center means the cell area will be
 #: placed centrally. A value of top-left means the padding will be on
 #: only the bottom and right edges.
-
-active_border_color #00ff00
+# active_border_color #00ff00
 
 #: The color for the border of the active window. Set this to none to
 #: not draw borders around the active window.
-
-inactive_border_color #cccccc
+# inactive_border_color #cccccc
 
 #: The color for the border of inactive windows
-
-bell_border_color #ff5a00
+# bell_border_color #ff5a00
 
 #: The color for the border of inactive windows in which a bell has
 #: occurred
@@ -712,17 +706,15 @@ active_tab_title_template none
 
 #: Template to use for active tabs, if not specified falls back to
 #: tab_title_template.
-
-active_tab_foreground   #000
-active_tab_background   #eee
+# active_tab_foreground   #000
+# active_tab_background   #eee
 active_tab_font_style   bold-italic
-inactive_tab_foreground #444
-inactive_tab_background #999
+# inactive_tab_foreground #444
+# inactive_tab_background #999
 inactive_tab_font_style normal
 
 #: Tab bar colors and styles
-
-tab_bar_background none
+# tab_bar_background none
 
 #: Background color for the tab bar. Defaults to using the terminal
 #: background color.
@@ -730,9 +722,8 @@ tab_bar_background none
 #: }}}
 
 #: Color scheme {{{
-
-foreground #dddddd
-background #000000
+# foreground #dddddd
+# background #000000
 
 #: The foreground and background colors
 
@@ -790,13 +781,11 @@ dim_opacity 0.75
 
 #: How much to dim text that has the DIM/FAINT attribute set. One
 #: means no dimming and zero means fully dimmed (i.e. invisible).
-
-selection_foreground #000000
+# selection_foreground #000000
 
 #: The foreground for text selected with the mouse. A value of none
 #: means to leave the color unchanged.
-
-selection_background #fffacd
+# selection_background #fffacd
 
 #: The background for text selected with the mouse.
 
@@ -805,68 +794,54 @@ selection_background #fffacd
 #: The 256 terminal colors. There are 8 basic colors, each color has a
 #: dull and bright version, for the first 16 colors. You can set the
 #: remaining 240 colors as color16 to color255.
-
-color0 #000000
-color8 #767676
+# color0 #000000
+# color8 #767676
 
 #: black
-
-color1 #cc0403
-color9 #f2201f
+# color1 #cc0403
+# color9 #f2201f
 
 #: red
-
-color2  #19cb00
-color10 #23fd00
+# color2  #19cb00
+# color10 #23fd00
 
 #: green
-
-color3  #cecb00
-color11 #fffd00
+# color3  #cecb00
+# color11 #fffd00
 
 #: yellow
-
-color4  #0d73cc
-color12 #1a8fff
+# color4  #0d73cc
+# color12 #1a8fff
 
 #: blue
-
-color5  #cb1ed1
-color13 #fd28ff
+# color5  #cb1ed1
+# color13 #fd28ff
 
 #: magenta
-
-color6  #0dcdcd
-color14 #14ffff
+# color6  #0dcdcd
+# color14 #14ffff
 
 #: cyan
-
-color7  #dddddd
-color15 #ffffff
+# color7  #dddddd
+# color15 #ffffff
 
 #: white
-
-mark1_foreground black
+# mark1_foreground black
 
 #: Color for marks of type 1
-
-mark1_background #98d3cb
+# mark1_background #98d3cb
 
 #: Color for marks of type 1 (light steel blue)
-
-mark2_foreground black
+# mark2_foreground black
 
 #: Color for marks of type 2
-
-mark2_background #f2dcd3
+# mark2_background #f2dcd3
 
 #: Color for marks of type 1 (beige)
-
-mark3_foreground black
+# mark3_foreground black
 
 #: Color for marks of type 3
-
-mark3_background #f274bc
+# mark3_background #f274bc
 
 #: Color for marks of type 3 (violet)
 
@@ -996,15 +971,14 @@ term xterm-kitty
 #: }}}
 
 #: OS specific tweaks {{{
-
-wayland_titlebar_color system
+# wayland_titlebar_color system
 
 #: Change the color of the kitty window's titlebar on Wayland systems
 #: with client side window decorations such as GNOME. A value of
 #: system means to use the default system color, a value of background
 #: means to use the background color of the currently active window
 #: and finally you can use an arbitrary color, such as #12af59 or red.
-macos_titlebar_color system
+# macos_titlebar_color system
 
 #: Change the color of the kitty window's titlebar on macOS. A value
 #: of system means to use the default system color, a value of
@@ -1466,4 +1440,7 @@ map kitty_mod+f6 debug_config
 
 #: }}}
 
-include dracula.conf
+# BEGIN_KITTY_THEME
+# Gruvbox Material Dark Hard
+include current-theme.conf
+# END_KITTY_THEME
