Conky lua is using the external conkytheme.lua file, which can be modify externally.

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1441,6 +1441,6 @@ map kitty_mod+f6 debug_config
 #: }}}
 
 # BEGIN_KITTY_THEME
-# Dark Pastel
+# Dracula
 include current-theme.conf
 # END_KITTY_THEME
