add sort to ls-subtrees command.

--- a/.gitconfig
+++ b/.gitconfig
@@ -4,7 +4,7 @@
 [pull]
     rebase = true
 [alias]
-        ls-subtrees = !"for i in $(git log | grep git-subtree-dir | sed -e 's/^.*: //g' | uniq); do test -d $i && echo $i; done"
+        ls-subtrees = !"for i in $(git log | grep git-subtree-dir | sed -e 's/^.*: //g' | sort | uniq); do test -d $i && echo $i; done"
 [init]
 	defaultBranch = main
 [http]
