--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -47,7 +47,6 @@ glx-no-rebind-pixmap = true;
 # Partially breaks --resize-damage.
 # Defaults to undefined.
 #glx-swap-method = "undefined";
-
 round-borders = 15;
 
 #################################
@@ -66,8 +65,6 @@ shadow-offset-x = -7;
 shadow-offset-y = -7;
 # The translucency for shadows. (default .75)
 shadow-opacity = .5;
-
-clear-shadow = false;
 
 # Set if you want different colour shadows
 # shadow-red = 0.0;
@@ -129,7 +126,7 @@ inactive-dim = 0.05;
 # Do not let dimness adjust based on window opacity.
 # inactive-dim-fixed = true;
 # Blur background of transparent windows. Bad performance with X Render backend. GLX backend is preferred.
-#blur-background = true;
+blur-background = false;
 # Blur background of opaque windows with transparent frames as well.
 #blur-background-frame = true;
 # Do not let blur radius adjust based on window opacity.
@@ -177,16 +174,12 @@ mark-ovredir-focused = true;
 # Usually more reliable but depends on a EWMH-compliant WM.
 use-ewmh-active-win = true;
 # Detect rounded corners and treat them as rectangular when --shadow-ignore-shaped is on.
-detect-rounded-corners = true;
+detect-rounded-corners = false;
 
 # Detect _NET_WM_OPACITY on client windows, useful for window managers not passing _NET_WM_OPACITY of client windows to frame windows.
 # This prevents opacity being ignored for some apps.
 # For example without this enabled my xfce4-notifyd is 100% opacity no matter what.
 detect-client-opacity = true;
-
-# Specify refresh rate of the screen.
-# If not specified or 0, picom will try detecting this with X RandR extension.
-refresh-rate = 0;
 
 # Vertical synchronization: match the refresh rate of the monitor
 vsync = true;
