Try nvim from scratch.

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1924,6 +1924,6 @@ map opt+cmd+,    debug_config
 #: }}}
 
 # BEGIN_KITTY_THEME
-# Gruvbox Dark
+# Dracula
 include current-theme.conf
 # END_KITTY_THEME
