--- a/.local/share/applications/libreoffice-calc.desktop
+++ b/.local/share/applications/libreoffice-calc.desktop
@@ -21,7 +21,7 @@ Terminal=false
 Icon=libreoffice-calc
 Type=Application
 Categories=Office;Spreadsheet;X-Red-Hat-Base;X-MandrivaLinux-Office-Spreadsheets;
-Exec=libreoffice --calc %U
+Exec=env GTK_THEME=Adwaita libreoffice --calc %U
 MimeType=application/vnd.oasis.opendocument.spreadsheet;application/vnd.oasis.opendocument.spreadsheet-template;application/vnd.sun.xml.calc;application/vnd.sun.xml.calc.template;application/msexcel;application/vnd.ms-excel;application/vnd.openxmlformats-officedocument.spreadsheetml.sheet;application/vnd.ms-excel.sheet.macroEnabled.12;application/vnd.openxmlformats-officedocument.spreadsheetml.template;application/vnd.ms-excel.template.macroEnabled.12;application/vnd.ms-excel.sheet.binary.macroEnabled.12;text/csv;application/x-dbf;text/spreadsheet;application/csv;application/excel;application/tab-separated-values;application/vnd.lotus-1-2-3;application/vnd.oasis.opendocument.chart;application/vnd.oasis.opendocument.chart-template;application/x-dbase;application/x-dos_ms_excel;application/x-excel;application/x-msexcel;application/x-ms-excel;application/x-quattropro;application/x-123;text/comma-separated-values;text/tab-separated-values;text/x-comma-separated-values;text/x-csv;application/vnd.oasis.opendocument.spreadsheet-flat-xml;application/vnd.ms-works;application/clarisworks;application/x-iwork-numbers-sffnumbers;application/x-starcalc;
 Name=LibreOffice Calc
 GenericName=Spreadsheet
@@ -34,7 +34,6 @@ Keywords=Accounting;Stats;OpenDocument Spreadsheet;Chart;Microsoft Excel;Microso
 InitialPreference=5
 StartupWMClass=libreoffice-calc
 X-KDE-Protocols=file,http,ftp,webdav,webdavs
-
 Actions=NewDocument;
 [Desktop Action NewDocument]
 Name=New Spreadsheet
