--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -6,10 +6,15 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      TerminessTTFNerdFontMono
-bold_font        auto
-italic_font      auto
-bold_italic_font auto
+#font_family      TerminessTTFNerdFontMono
+#font_family      FiraCode Nerd Font
+#bold_font        Fira Code Medium Nerd Font Complete
+#italic_font      Fantasque Sans Mono Italic Nerd Font Complete Mono
+#bold_italic_font auto
+font_family      OperatorMono-Book
+bold_font        OperatorMono-Bold
+italic_font      OperatorMono-BookItalic
+bold_italic_font OperatorMono-BoldItalic
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
@@ -24,7 +29,7 @@ bold_italic_font auto
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 13.0
+font_size 12.0
 
 #: Font size (in pts)
 
@@ -1924,6 +1929,6 @@ map opt+cmd+,    debug_config
 #: }}}
 
 # BEGIN_KITTY_THEME
-# Dracula
+# Atom
 include current-theme.conf
 # END_KITTY_THEME
