--- a/panel/whiskermenu-7.rc
+++ b/panel/whiskermenu-7.rc
@@ -1,42 +1,43 @@
-favorites=kitty.desktop,Alacritty.desktop,firefox.desktop,jetbrains-idea.desktop,atom.desktop,sublime_text.desktop,synology-note-station-client.desktop,spotify.desktop,com.slack.Slack.desktop,org.kde.spectacle.desktop,org.kde.kcolorchooser.desktop
-recent=org.manjaro.pamac.manager.desktop,org.kde.dolphin.desktop,sublime_text.desktop,org.kde.spectacle.desktop,atom.desktop,com.slack.Slack.desktop,org.kde.kcolorchooser.desktop,gcm-picker.desktop,firefox.desktop,spotify.desktop
-button-title=Arch
+favorites=firefox.desktop,Alacritty.desktop,kitty.desktop,jetbrains-idea.desktop,org.kde.dolphin.desktop,org.kde.krusader.desktop,arandr.desktop
+recent=Alacritty.desktop,arandr.desktop,firefox.desktop,kitty.desktop
 button-icon=distributor-logo-archlinux
 button-single-row=false
-show-button-title=true
+show-button-title=false
 show-button-icon=true
 launcher-show-name=true
 launcher-show-description=true
-launcher-show-tooltip=false
-item-icon-size=3
+launcher-show-tooltip=true
+launcher-icon-size=2
 hover-switch-category=false
 category-show-name=true
 category-icon-size=1
-load-hierarchy=false
-view-as-icons=false
+sort-categories=true
+view-mode=1
 default-category=0
 recent-items-max=10
 favorites-in-recent=true
-position-search-alternate=true
+position-search-alternate=false
 position-commands-alternate=false
-position-categories-alternate=true
+position-categories-alternate=false
+position-categories-horizontal=false
 stay-on-focus-out=false
+profile-shape=0
 confirm-session-command=true
-menu-width=705
-menu-height=807
-menu-opacity=86
+menu-width=749
+menu-height=854
+menu-opacity=100
 command-settings=xfce4-settings-manager
 show-command-settings=true
 command-lockscreen=xflock4
 show-command-lockscreen=true
-command-switchuser=gdmflexiserver
+command-switchuser=dm-tool switch-to-greeter
 show-command-switchuser=false
 command-logoutuser=xfce4-session-logout --logout --fast
-show-command-logoutuser=true
+show-command-logoutuser=false
 command-restart=xfce4-session-logout --reboot --fast
-show-command-restart=true
+show-command-restart=false
 command-shutdown=xfce4-session-logout --halt --fast
-show-command-shutdown=true
+show-command-shutdown=false
 command-suspend=xfce4-session-logout --suspend
 show-command-suspend=false
 command-hibernate=xfce4-session-logout --hibernate
@@ -47,7 +48,7 @@ command-menueditor=menulibre
 show-command-menueditor=true
 command-profile=mugshot
 show-command-profile=true
-search-actions=5
+search-actions=6
 
 [action0]
 name=Man Pages
@@ -56,24 +57,30 @@ command=exo-open --launch TerminalEmulator man %s
 regex=false
 
 [action1]
-name=Web Search
+name=Search the Web
 pattern=?
 command=exo-open --launch WebBrowser https://duckduckgo.com/?q=%u
 regex=false
 
 [action2]
+name=Search for Files
+pattern=-
+command=catfish --path=~ --start %s
+regex=false
+
+[action3]
 name=Wikipedia
 pattern=!w
 command=exo-open --launch WebBrowser https://en.wikipedia.org/wiki/%u
 regex=false
 
-[action3]
+[action4]
 name=Run in Terminal
 pattern=!
 command=exo-open --launch TerminalEmulator %s
 regex=false
 
-[action4]
+[action5]
 name=Open URI
 pattern=^(file|http|https):\\/\\/(.*)$
 command=exo-open \\0
