Picom supports for animation of picom forks.

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -239,3 +239,15 @@ wintypes:
 
 # Use X Sync fence to sync clients' draw calls. Needed on nvidia-drivers with GLX backend for some users.
 xrender-sync-fence = true;
+
+animations = true;
+animation-stiffness = 300.0;
+animation-dampening = 25.0;
+animation-clamping = true;
+animation-mass = 1;
+#animation-window-mass = 1.0;
+#animation-delta = 10; 
+#animation-for-unmap-window = "slide-up";
+animation-for-open-window = "zoom";
+animation-for-menu-window = "slide-down";
+animation-for-transient-window = "slide-down";
