Upgrade to Nerd Fonts 3.0

--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -7,7 +7,7 @@ disabled = true
 
 # Replace the "❯" symbol in the prompt with "➜"
 [character]                         # The name of the module we are configuring is "character"
-success_symbol = "[➜](bold green)"  # The "success_symbol" is set to "➜" with color "bold green"
+success_symbol = "[󰜴](bold green)"  # The "success_symbol" is set to "➜" with color "bold green"
 
 # Use custom format
 # format = """
