--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -113,7 +113,7 @@ font:
     # family: JetBrains Mono
     # family: UbuntuMono Nerd Font
     # family: Monofur Nerd Font
-    family: TerminessTTF Nerd Font
+    family: Terminess Nerd Font
     # family: Mononoki Nerd Font
 
     # The `style` can be specified to pick a specific face.
@@ -132,7 +132,7 @@ font:
     # family: JetBrains Mono
     # family: UbuntuMono Nerd Font
     # family: Monofur Nerd Font
-    family: TerminessTTF Nerd Font
+    family: Terminess Nerd Font
     # family: Mononoki Nerd Font
 
     # The `style` can be specified to pick a specific face.
@@ -151,7 +151,7 @@ font:
     # family: JetBrains Mono
     # family: UbuntuMono Nerd Font
     # family: Monofuritalic Nerd Font Mono
-    family: TerminessTTF Nerd Font
+    family: Terminess Nerd Font
     # family: Mononoki Nerd Font
 
     # The `style` can be specified to pick a specific face.
@@ -170,7 +170,7 @@ font:
     # family: JetBrains Mono
     # family: UbuntuMono Nerd Font
     # family: Monofuritalic Nerd Font Mono
-    family: TerminessTTF Nerd Font
+    family: Terminess Nerd Font
     # family: Mononoki Nerd Font
 
     # The `style` can be specified to pick a specific face.
@@ -203,12 +203,12 @@ draw_bold_text_with_bright_colors: true
 
 # Colors (Tomorrow Night Bright)
 colors:
-  # COLORSCHEME: dracula.yaml
+  # COLORSCHEME: monokai_pro.yaml
   # Default colors
   primary:
     # hard contrast: background = '0xf9f5d7'
-    background: '0x282a36'
-    foreground: '0xf8f8f2'
+    background: '0x2D2A2E'
+    foreground: '0xfff1f3'
 
   # Normal colors
   selection:
@@ -216,29 +216,30 @@ colors:
 
   # Normal colors
   normal:
-    black: '0x000000'
-    red: '0xff5555'
-    green: '0x50fa7b'
-    yellow: '0xf1fa8c'
-    blue: '0xbd93f9'
-    magenta: '0xff79c6'
-    cyan: '0x8be9fd'
-    white: '0xbbbbbb'
+    black: '0x2c2525'
+    red: '0xfd6883'
+    green: '0xadda78'
+    yellow: '0xf9cc6c'
+    blue: '0xf38d70'
+    magenta: '0xa8a9eb'
+    cyan: '0x85dacc'
+    white: '0xfff1f3'
 
   # Bright colors
   bright:
-    black: '0x555555'
-    red: '0xff5555'
-    green: '0x50fa7b'
-    yellow: '0xf1fa8c'
-    blue: '0xcaa9fa'
-    magenta: '0xff79c6'
-    cyan: '0x8be9fd'
-    white: '0xffffff'
+    black: '0x72696a'
+    red: '0xfd6883'
+    green: '0xadda78'
+    yellow: '0xf9cc6c'
+    blue: '0xf38d70'
+    magenta: '0xa8a9eb'
+    cyan: '0x85dacc'
+    white: '0xfff1f3'
   cursor:
     text: '0x1d1f21'
     cursor: '0xffffff'
 
+  # Normal colors
 selection:
   # This string contains all characters that are used as separators for
   # "semantic words" in Alacritty.
