--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -97,6 +97,7 @@ shadow-exclude = [
     "class_g ?= 'Xfce4-notifyd'",
     "class_g ?= 'Xfce4-power-manager'",
     "class_g ?= 'ulauncher'",
+    "class_g ?= 'rofi'",
     "_GTK_FRAME_EXTENTS@:c",
     "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
 ];
