Improve start_process script with retries feature.

--- a/.config/autostart/play-startup-sound.desktop
+++ b/.config/autostart/play-startup-sound.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
-Exec=start_process '[[ -z "$LAPTOP" ]] && mpv --no-video ~/.config/awesome/fishlive/sounds/startup-snd-1.mp3'
+Exec=start_process -r '[[ -z "$LAPTOP" ]] && mpv --no-video ~/.config/awesome/fishlive/sounds/startup-snd-1.mp3'
 Name=mpv
 Comment=a media player
 Type=Application
