Kgpg remove from awesome, doesn't work without KDE.

--- a/.config/autostart/org.kde.kgpg.desktop
+++ b/.config/autostart/org.kde.kgpg.desktop
@@ -5,6 +5,7 @@ Exec=kgpg %U
 Icon=kgpg
 X-DocPath=kgpg/index.html
 X-DBUS-StartupType=Unique
+OnlyShowIn=KDE
 MimeType=application/pgp-encrypted;application/pgp-signature;application/pgp-keys;
 GenericName=Encryption Tool
 GenericName[ar]=أداة للتشفير
