--- a/.config/autostart/pam_kwallet_init.desktop
+++ b/.config/autostart/pam_kwallet_init.desktop
@@ -1,6 +1,7 @@
 [Desktop Entry]
 Name=KWallet PAM Socket Connection
 Name[ar]=اتصال بمقبس التوثيق المحفظة ك
+Name[ast]=Conexón de la ralura PAM de KWallet
 Name[az]=KWallet PAM Socket Bağlantısı
 Name[bg]=Връзка с KWallet PAM сокет
 Name[ca]=Connexió amb el sòcol PAM del KWallet
@@ -10,6 +11,7 @@ Name[da]=KWallet PAM-sokkel-forbindelse
 Name[de]=Verbindung zu KWallet-PAM-Socket
 Name[el]=Σύνδεση υποδοχής KWallet PAM
 Name[en_GB]=KWallet PAM Socket Connection
+Name[eo]=KWallet PAM konektinga konekto
 Name[es]=Conexión con el «socket» PAM de KWallet
 Name[et]=KDE turvalaeka PAM-sokli ühendus
 Name[eu]=KWallet PAM socket konexioa
@@ -33,6 +35,7 @@ Name[pt]=Ligação por 'Socket' entre PAM e o KWallet
 Name[pt_BR]=Conexão do Socket PAM do KWallet
 Name[ro]=Conexiune la soclu PAM KWallet
 Name[ru]=Интеграция KWallet и PAM
+Name[sa]=KWallet PAM सॉकेट संयोजनम्
 Name[sk]=Pripojenie socketu KWallet PAM
 Name[sl]=Povezava z vtičem PAM KWalleta
 Name[sr]=Веза са К‑новчаниковим ПАМ сокетом
@@ -49,6 +52,7 @@ Name[zh_CN]=KWallet PAM 套接字连接
 Name[zh_TW]=KWallet PAM Socket 連線
 Comment=Connect to KWallet PAM socket
 Comment[ar]=اتصل بمقبس التوثيق محفظة ك
+Comment[ast]=Conéctase a la ralura PAM de KWallet
 Comment[az]=KWallet PAM socket'ə qoşulmaq
 Comment[bg]=Свързване с KWallet PAM сокет
 Comment[ca]=Connecta amb un sòcol PAM del KWallet
@@ -58,6 +62,7 @@ Comment[da]=Forbind til KWallet PAM-sokkel
 Comment[de]=Zum KWallet-PAM-Socket verbinden
 Comment[el]=Σύνδεση με υποδοχή KWallet PAM
 Comment[en_GB]=Connect to KWallet PAM socket
+Comment[eo]=Konektu al KWallet PAM-konektingo
 Comment[es]=Conectar con el «socket» PAM de KWallet
 Comment[et]=Ühendumine KDE turvalaeka PAM-sokliga
 Comment[eu]=Konektatu KWallet-en PAM socket-era
@@ -81,6 +86,7 @@ Comment[pt]=Ligar ao 'socket' de PAM do KWallet
 Comment[pt_BR]=Conecta ao socket PAM do KWallet
 Comment[ro]=Conectează la soclul PAM KWallet
 Comment[ru]=Подключение PAM к KWallet по сокету
+Comment[sa]=KWallet PAM सॉकेट् इत्यनेन सह संयोजयन्तु
 Comment[sk]=Pripojiť na KWallet PAM socket
 Comment[sl]=Povežite se z vtičem PAM KWalleta
 Comment[sr]=Повежи се на К‑новчаников ПАМ сокет
