New animations for picom.

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -99,7 +99,6 @@ shadow-exclude = [
     "class_g ?= 'ulauncher'",
     "class_g ?= 'rofi'",
     "_GTK_FRAME_EXTENTS@:c",
-    "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
 ];
 
 # Avoid drawing shadow on all shaped windows (see also: --detect-rounded-corners)
@@ -118,8 +117,6 @@ inactive-opacity-override = false;
 opacity-rule = [
     "80:class_g = 'copyq'",
     "90:name = 'alttab'",
-    # no opacity on sticky windows
-    "99:_NET_WM_STATE@:32a *= '_NET_WM_STATE_STICKY'"
 ];
 
 # Dim inactive windows. (0.0 - 1.0)
@@ -242,14 +239,105 @@ wintypes:
 # Use X Sync fence to sync clients' draw calls. Needed on nvidia-drivers with GLX backend for some users.
 xrender-sync-fence = true;
 
-animations = true;
-animation-stiffness = 300.0;
-animation-dampening = 25.0;
-animation-clamping = true;
-animation-mass = 1;
+# animations = true;
+# animation-stiffness = 300.0;
+# animation-dampening = 25.0;
+# animation-clamping = true;
+# animation-mass = 1;
 #animation-window-mass = 1.0;
 #animation-delta = 10; 
-#animation-for-unmap-window = "slide-up";
-animation-for-open-window = "zoom";
-animation-for-menu-window = "slide-down";
-animation-for-transient-window = "slide-down";
+# #animation-for-unmap-window = "slide-up";
+# animation-for-open-window = "zoom";
+# animation-for-menu-window = "slide-down";
+# animation-for-transient-window = "slide-down";
+
+#################################
+#     Animation Settings    #
+#################################
+
+animations = (
+  # {
+  #   triggers = ["close", "hide"];
+  #   opacity = {
+  #     curve = "linear";
+  #     duration = 0.1;
+  #     start = "window-raw-opacity-before";
+  #     end = 0;
+  #   };
+  #   blur-opacity = "opacity";
+  #   shadow-opacity = "opacity";
+  # },
+  # {
+  #   triggers = ["open", "show"];
+  #   opacity = {
+  #     curve = "cubic-bezier(0,1,1,1)";
+  #     duration = 0.3;
+  #     start = 0;
+  #     end = "window-raw-opacity";
+  #   };
+  #   blur-opacity = "opacity";
+  #   shadow-opacity = "opacity";
+  #   offset-x = "(1 - scale-x) / 2 * window-width";
+  #   offset-y = "(1 - scale-y) / 2 * window-height";
+  #   scale-x = {
+  #     curve = "cubic-bezier(0,1.3,1,1)";
+  #     duration = 0.3;
+  #     start = 0.6;
+  #     end = 1;
+  #   };
+  #   scale-y = "scale-x";
+  #   shadow-scale-x = "scale-x";
+  #   shadow-scale-y = "scale-y";
+  #   shadow-offset-x = "offset-x";
+  #   shadow-offset-y = "offset-y";
+  # },
+  #   {
+  #   triggers = ["geometry"]
+  #   scale-x = {
+  #     curve = "cubic-bezier(0,0,0,1.28)";
+  #     duration = 0.16;
+  #     start = "window-width-before / window-width";
+  #     end = 1;
+  #   }
+  #   scale-y = {
+  #     curve = "cubic-bezier(0,0,0,1.28)";
+  #     duration = 0.16;
+  #     start = "window-height-before / window-height";
+  #     end = 1;
+  #   }
+  #   offset-x = {
+  #     curve = "cubic-bezier(0,0,0,1.28)";
+  #     duration = 0.16;
+  #     start = "window-x-before - window-x";
+  #     end = 0;
+  #   }
+  #   offset-y = {
+  #     curve = "cubic-bezier(0,0,0,1.28)";
+  #     duration = 0.16;
+  #     start = "window-y-before - window-y";
+  #     end = 0;
+  #   }
+
+  #   shadow-scale-x = "scale-x";
+  #   shadow-scale-y = "scale-y";
+  #   shadow-offset-x = "offset-x";
+  #   shadow-offset-y = "offset-y";
+  # }
+  {
+    triggers = ["close", "hide"];
+    preset = "disappear";
+    duration = 0.08;
+    scale = 0.96;
+  },
+  {
+    triggers = ["open", "show"];
+    preset = "appear";
+    duration = 0.08;
+    scale = 0.95;
+  },
+  {
+    triggers = ["geometry"];
+    preset = "geometry-change";
+    duration = 0.16;
+  }  
+)
