Display config switcher added. Picom animation part 1.

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -323,21 +323,28 @@ animations = (
   #   shadow-offset-x = "offset-x";
   #   shadow-offset-y = "offset-y";
   # }
-  {
-    triggers = ["close", "hide"];
-    preset = "disappear";
-    duration = 0.08;
-    scale = 0.96;
-  },
-  {
-    triggers = ["open", "show"];
-    preset = "appear";
-    duration = 0.08;
-    scale = 0.95;
-  },
-  {
-    triggers = ["geometry"];
-    preset = "geometry-change";
-    duration = 0.16;
-  }  
+#  {
+#    triggers = ["close", "hide"];
+#    preset = "disappear";
+#    duration = 0.08;
+#    scale = 0.96;
+#  },
+#  {
+#    triggers = ["open", "show"];
+#    preset = "appear";
+#    duration = 0.08;
+#    scale = 0.95;
+#  },
+#  {
+#    triggers = ["geometry"];
+#    preset = "geometry-change";
+#    duration = 0.16;
+#  },
 )
+
+# rules = (
+#   {
+#     match = "MANUAL@ != 1";
+#     animations = ( { triggers = [ "geometry" ]; preset = "geometry-change"; }, );
+#   },
+# ),
