Complete multi-monitor support and component framework added.

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -47,7 +47,7 @@ glx-no-rebind-pixmap = true;
 # Partially breaks --resize-damage.
 # Defaults to undefined.
 #glx-swap-method = "undefined";
-round-borders = 15;
+#round-borders = 15;
 
 #################################
 #
@@ -74,32 +74,30 @@ shadow-opacity = .5;
 # The shadow exclude options are helpful if you have shadows enabled. Due to the way picom draws its shadows, certain applications will have visual glitches
 # (most applications are fine, only apps that do weird things with xshapes or argb are affected).
 # This list includes all the affected apps I found in my testing. The "! name~=''" part excludes shadows on any "Unknown" windows, this prevents a visual glitch with the XFWM alt tab switcher.
-shadow-exclude = [
-    "! name~=''",
-    "name = 'Notification'",
-    "name = 'Plank'",
-    "name = 'Docky'",
-    "name = 'Kupfer'",
-    "name = 'xfce4-notifyd'",
-    "name = 'cpt_frame_window'",
-    "name *= 'VLC'",
-    "name *= 'compton'",
-    "name *= 'picom'",
-    "name *= 'Chromium'",
-    "name *= 'Chrome'",
-    "name *= 'conky'",
-    "class_g = 'Firefox' && argb",
-    "class_g = 'Conky'",
-    "class_g = 'Kupfer'",
-    "class_g = 'Synapse'",
-    "class_g ?= 'Notify-osd'",
-    "class_g ?= 'Cairo-dock'",
-    "class_g ?= 'Xfce4-notifyd'",
-    "class_g ?= 'Xfce4-power-manager'",
-    "class_g ?= 'ulauncher'",
-    "class_g ?= 'rofi'",
-    "_GTK_FRAME_EXTENTS@:c",
-];
+#shadow-exclude = [
+ #   "! name~=''",
+ #   "name = 'Notification'",
+ #   "name = 'Plank'",
+ #   "name = 'Docky'",
+ #   "name = 'Kupfer'",
+ #   "name = 'xfce4-notifyd'",
+ #   "name = 'cpt_frame_window'",
+ #   "name *= 'VLC'",
+ #   "name *= 'compton'",
+ #   "name *= 'picom'",
+ #   "name *= 'Chromium'",
+ #   "name *= 'Chrome'",
+ #   "name *= 'conky'",
+ #   "class_g = 'Conky'",
+ #   "class_g = 'Kupfer'",
+ #   "class_g = 'Synapse'",
+ #   "class_g ?= 'Notify-osd'",
+ #   "class_g ?= 'Cairo-dock'",
+ #   "class_g ?= 'Xfce4-notifyd'",
+ #   "class_g ?= 'Xfce4-power-manager'",
+ #   "class_g ?= 'ulauncher'",
+ #   "class_g ?= 'rofi'",
+#];
 
 # Avoid drawing shadow on all shaped windows (see also: --detect-rounded-corners)
 shadow-ignore-shaped = false;
@@ -142,15 +140,15 @@ blur-background-exclude = [
 #################################
 
 # Fade windows during opacity changes.
-fading = true;
+#fading = true;
 # The time between steps in a fade in milliseconds. (default 10).
 #fade-delta = 4;
 #fade-delta = 10;
 # Opacity change between steps while fading in. (default 0.028).
 #fade-in-step = 0.03;
-fade-in-step = 0.056;
+#fade-in-step = 0.056;
 # Opacity change between steps while fading out. (default 0.03).
-fade-out-step = 0.06;
+#fade-out-step = 0.06;
 # Fade windows in/out when opening/closing
 # no-fading-openclose = true;
 
@@ -197,10 +195,10 @@ dbe = false;
 unredir-if-possible = false;
 
 # Specify a list of conditions of windows that should always be considered focused.
-focus-exclude = [
-  "ANTIDIM_FLAG@:8c",
-  "_NET_WM_STATE@:32a *= '_NET_WM_STATE_STICKY'"
-];
+#focus-exclude = [
+#  "ANTIDIM_FLAG@:8c",
+#  "_NET_WM_STATE@:32a *= '_NET_WM_STATE_STICKY'"
+#];
 
 # Use WM_TRANSIENT_FOR to group windows, and consider windows in the same group focused at the same time.
 detect-transient = true;
@@ -323,28 +321,43 @@ animations = (
   #   shadow-offset-x = "offset-x";
   #   shadow-offset-y = "offset-y";
   # }
-#  {
-#    triggers = ["close", "hide"];
-#    preset = "disappear";
-#    duration = 0.08;
-#    scale = 0.96;
-#  },
-#  {
-#    triggers = ["open", "show"];
-#    preset = "appear";
-#    duration = 0.08;
-#    scale = 0.95;
-#  },
-#  {
-#    triggers = ["geometry"];
-#    preset = "geometry-change";
-#    duration = 0.16;
-#  },
+  {
+    triggers = ["close", "hide"];
+    preset = "disappear";
+    duration = 0.16;
+    scale = 1.0;
+  },
+  {
+    triggers = ["open", "show"];
+    preset = "appear";
+    duration = 0.16;
+    scale = 0.98;
+  },
 )
 
-# rules = (
-#   {
-#     match = "MANUAL@ != 1";
-#     animations = ( { triggers = [ "geometry" ]; preset = "geometry-change"; }, );
-#   },
-# ),
+rules = (
+  {
+    match = "MANUAL@ != 1";
+    animations = ({ 
+      triggers = [ "geometry" ]; 
+      preset = "geometry-change"; 
+      duration = 0.16; 
+    });
+  },
+ {
+   match = "window_type *= 'menu'";
+   shadow = false;
+ },
+ { 
+   match = "name *?= 'firefox'";
+   shadow = false;
+ },
+ { 
+   match = "class_g *?= 'conky'";
+   shadow = false;
+ },
+ { 
+   match = "window_type = 'desktop'";
+   shadow = false;
+ },
+)
