--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -15,8 +15,8 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,auto
-
+#monitor=,preferred,auto,auto
+monitor=DP-3,3840x2160@144,0x0,1.2
 
 ###################
 ### MY PROGRAMS ###
@@ -39,16 +39,16 @@ $menu = wofi --show drun
 
 exec-once = $terminal
 # exec-once = nm-applet &
-exec-once = waybar & hyprpaper & firefox
+exec-once = waybar & hyprpaper & firefox-developer-edition
 
 
 #############################
 ### ENVIRONMENT VARIABLES ###
 #############################
 
-# See https://wiki.hyprland.org/Configuring/Environment-variables/
+# See https://wiki.hyprland.org/Configuring/Environment-va::riables/
 
-env = XCURSOR_SIZE,24
+env = XCURSOR_SIZE,32
 env = HYPRCURSOR_SIZE,24
 
 
