--- a/.config/xfce4/panel/netload-23.rc
+++ b/.config/xfce4/panel/netload-23.rc
@@ -5,7 +5,7 @@ Colorize_Values=true
 Color_In=rgb(255,79,0)
 Color_Out=rgb(255,229,0)
 Text=Net
-Network_Device=enp6s0
+Network_Device=wlp1s0
 Max_In=4096
 Max_Out=4096
 Auto_Max=true
