--- a/.local/share/applications/jetbrains-idea-docker.desktop
+++ b/.local/share/applications/jetbrains-idea-docker.desktop
@@ -1,9 +1,9 @@
 [Desktop Entry]
 Version=1.0
 Type=Application
-Name=IntelliJ IDEA Ultimate Edition Docker
+Name=IntelliJ IDEA Ultimate Edition Noble Docker
 Icon=/home/box/src/ide/idea-latest/bin/idea.svg
-Exec=/home/box/src/devenv/devenv-focal/docker-run.sh devenv-focal /home/box/src/ide/idea-latest/bin/idea.sh %f
+Exec=/home/box/src/devenv/devenv-noble/docker-run.sh devenv-noble /home/box/src/ide/idea-latest/bin/idea.sh s
 Comment=Capable and Ergonomic IDE for JVM
 Categories=Development;IDE;
 Terminal=false
