--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -74,7 +74,7 @@ dithered-present = false;
 
 # Enable VSync.
 # Default: false
-vsync = true;
+vsync = false;
 
 # Attempt to detect windows with rounded corners.
 # Default: false
